vlc can't play FLVs with speex audio
VLC version: v1.0 Platform: Mac OS X 10.5.7, but this probably happens on all platforms.
I have some audio-only FLVs. The ones that have the audio encoded with nellymoser will play. However, ones with the audio encoded with speex won't play (the player window will act as if its playing but no sound is heard).
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Author
audio-only FLV with nellymoser encoding (this will play fine in VLC)
Added attachment:
- Author
- Author
- Author
- Author
fyi, here's what ffmpeg reports for the speex FLV:
$ ffmpeg -i ./audio-only-speex.flv test.wav FFmpeg version UNKNOWN, Copyright (c) 2000-2009 Fabrice Bellard, et al. configuration: --prefix=/usr/local/xuggler --extra-cflags=-I/Users/asimmons/Development/xuggler-2.0/build/native/i386-apple-darwin9.6.0/captive/usr/local/xuggler/include --extra-ldflags=-L/Users/asimmons/Development/xuggler-2.0/build/native/i386-apple-darwin9.6.0/captive/usr/local/xuggler/lib --enable-shared --disable-stripping --enable-gpl --enable-libx264 --enable-libmp3lame --enable-libspeex --enable-libfaac --enable-pthreads libavutil 50. 2. 0 / 50. 2. 0 libavcodec 52.22. 3 / 52.22. 3 libavformat 52.32. 0 / 52.32. 0 libavdevice 52. 1. 0 / 52. 1. 0 libswscale 0. 7. 1 / 0. 7. 1 built on May 5 2009 11:17:03, gcc: 4.0.1 (Apple Inc. build 5490) [flv @ 0x1802600]Could not find codec parameters (Video: 0x0000) Input [#0](https://code.videolan.org/videolan/vlc/-/issues/0), flv, from './audio-only-speex.flv': Duration: 00:00:03.05, start: 0.000000, bitrate: N/A Stream [#0](https://code.videolan.org/videolan/vlc/-/issues/0).0: Video: 0x0000, 1k tbr, 1k tbn, 1k tbc Stream [#0](https://code.videolan.org/videolan/vlc/-/issues/0).1: Audio: libspeex, 16000 Hz, mono, s16 [libspeex @ 0x1804400]Missing Speex header, assuming defaults. Output [#0](https://code.videolan.org/videolan/vlc/-/issues/0), wav, to 'test.wav': Stream [#0](https://code.videolan.org/videolan/vlc/-/issues/0).0: Audio: pcm_s16le, 16000 Hz, mono, s16, 256 kb/s Stream mapping: Stream [#0](https://code.videolan.org/videolan/vlc/-/issues/0).1 -> [#0](https://code.videolan.org/videolan/vlc/-/issues/0).0 Press [q] to stop encoding size= 96kB time=3.08 bitrate= 256.1kbits/s video:0kB audio:96kB global headers:0kB muxing overhead 0.044643%
- Rémi Denis-Courmont assigned to @fenrir
assigned to @fenrir
- Rémi Denis-Courmont added Component::Demuxers + 1 deleted label
added Component::Demuxers + 1 deleted label
- Owner
http://pastie.org/557549 is a patch to solve it, if the build is done without the speex decoder.
- Owner
or --codec avcodec is used.
- Owner
Applied. Now the speex decoder needs to be fixed.
- Owner
Still broken as of 1.2
Still broken as of 2.0.1
Original author: https://www.google.com/accounts/o8/id?id=aitoawnnbvp_lqa4btnrlcelpd5o1bvmpjczybi
- Owner
I got
[libspeex @ 0x7f651cc34c80] Missing Speex header, assuming defaults. [libspeex @ 0x7f651c003020] Missing Speex header, assuming defaults.
http://streams.videolan.org/issues/2973/2012-11-07_192942447.1.flv
- Owner
More samples on
- Owner
See #10828 (closed)
commit 1a9bda43 Author: Tristan Matthews le.businessman@gmail.com Date: Sun Apr 20 19:56:04 2014 -0400
speex: assume default settings if header is missing Fixes [#2973](https://code.videolan.org/videolan/vlc/-/issues/2973)
Original author: le.businessman@gmail.com
- Migration Bot added Status::fixed label
added Status::fixed label
- Migration Bot closed
closed