speex: assume default settings if header is missing

Fixes #2973